# FORGE-plus

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
configs/llm/: default.yaml  local.yaml
configs/objects/: objects.yaml
configs/tasks/: task1_single_insertion.yaml  (+2 more)
docs/: ISAAC_RTX_RENDERING.md  RENDERING.md  proposal.html  rendering.md
forge_plus/: __init__.py  episode.py  isaac_insertion_env.py  isaac_pick_place_env.py  isaac_place_env.py
llm/: budget_cache.json
results/: metrics_task1_franka_panda.json
runs/: README.md
scripts/: build_franka_robotiq_2f140.py  check_env.py  eval_forge.py  eval_render_isaac.py  eval_render_pybullet.py  eval_rollout.py  eval_rollout_task3.py  eval_video.py  evaluate.py  fetch_shadercache.py  libglu_stub.c  probe_built_asset.py  probe_hand_fk.py  probe_robotiq_asset.py  probe_robotiq_env.py  probe_rq_isolate.py  probe_rq_scene.py  probe_usd_dump.py  probe_usd_wiring.py  render_eval_mpl.py  render_eval_video.py  render_forge_min.py  render_fragile_task3.py  render_grid_video.py  render_pick_place.py  render_preview.py  render_recovery.py  render_recovery_until_success.sh  render_task1_rtx.py  render_task3.py  render_until_success.sh  report_task3.py  run_episode.py  run_recovery_insertion.py  sanity_v6.py  setup_runtime.sh  train_pick_place.py  train_place.py  train_skill.py  wait_and_train_release.sh
tests/: test_budget_setter.py  test_episode.py  test_force_clamp.py  test_forge_skill.py  test_place_stack_env.py  test_recovery_loop.py  test_recovery_selector.py  test_signature_encoder.py
(+40 files in other folders)
